--- a/manage/css/global.css
+++ b/manage/css/global.css
@@ -287,6 +287,8 @@ textarea:focus{border-color: #6963db;background: #f2f1fa;}
 .sitemap .rig form{border: 1px solid #dddddd;}
 .sitemap .sment{display: block;border: 1px solid #0073bb;background: #f1faff;border-radius: 2px;padding: 20px;font-size: 14px;font-weight: bold;line-height: 24px;letter-spacing: -1px;color: #333333;margin-bottom: 20px;}
 .sitemap .sment i{font-size: 20px;color: #0073bb;display: block;margin: 0 auto;margin-bottom: 20px;}
+.sitemap.with-ajax-cover{position: relative;}
+.sitemap .ajax-cover{position: absolute;top: 0;left: 0;width: 100%;height: 100%;z-index: 30;background: rgba(255,255,255,0.4);}
 
 .sitemap .st-1d{border: 1px solid #dddddd;margin-bottom: 10px;border-radius: 2px;background: #ffffff;}
 .sitemap .st-1d h4{position: relative;display: block;padding: 0 15px;background: #fafafa;border-bottom: 1px solid #eeeeee;}
