--- a/theme/zigger-simple/mod-board/board/basic/style.css
+++ b/theme/zigger-simple/mod-board/board/basic/style.css
@@ -187,6 +187,7 @@
     #board-sch > a{padding: 0 10px;}
 
     #board-cat{border-bottom: none;}
+    #board-cat h3{display: none;}
     #board-cat ul > li{margin: 1px;}
     #board-cat ul > li a{line-height: 30px;padding: 0 10px;font-size: 12px;border: 1px solid #f7f7f7;border-radius: 3px;letter-spacing: -1px;}
     #board-cat ul > li.active{margin-bottom: 0;}
