--- a/theme/zigger-simple/mod-board/board/gallery/style.css
+++ b/theme/zigger-simple/mod-board/board/gallery/style.css
@@ -13,6 +13,7 @@
 #board-sch > a{padding: 0 10px;vertical-align: top;}
 
 #board-cat{margin-bottom: 15px;border-bottom: 1px solid #dddddd;}
+#board-cat h3{display: none;}
 #board-cat ul > li{display: inline-block;vertical-align: top;margin: 1px 2px 0 0;background: #ffffff;}
 #board-cat ul > li a{display: block;line-height: 40px;padding: 0 20px;font-size: 14px;color: #999999;text-decoration: none;background: #f7f7f7;border: 1px solid #f7f7f7;border-bottom: none;border-radius: 3px 3px 0 0;transition: all 0.3s;}
 #board-cat ul > li.active{margin-bottom: -1px;}
@@ -46,8 +47,8 @@
 #board-list .list .tmb .link{position: absolute;top: 1px;left: 1px;width: calc(100% - 2px);height: calc(100% - 2px);z-index: 3;background-size: cover;background-position: center center;}
 #board-list .list .info{position: relative;padding: 20px 15px;z-index: 3;}
 #board-list .list .info .tit{position: relative;display: block;color: #000000;letter-spacing: -1px;}
-#board-list .list .info .tit .sbj{display: block;width: 100%;padding-right: 50px;color: #000000;font-size: 15px;font-weight: 500;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;text-align: left;box-sizing: border-box;z-index: 3;}
-#board-list .list .info .txt{display: block;font-size: 13px;line-height: 16px;height: 50px;overflow: hidden;letter-spacing: -1px;color: #999;margin-top: 10px;}
+#board-list .list .info .tit .sbj{display: inline-block;vertical-align: middle;width: calc(100% - 40px);color: #000000;font-size: 15px;font-weight: 500;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;text-align: left;box-sizing: border-box;z-index: 3;}
+#board-list .list .info .txt{display: block;font-size: 13px;line-height: 16px;height: 50px;overflow: hidden;letter-spacing: -1px;color: #999;margin-top: 10px;white-space: normal;}
 #board-list .list .info .chk{position: relative;z-index: 2;}
 #board-list .list .info .cmt{position: absolute;top: 8px;right: 0;font-size: 12px;font-weight: bold;margin-left: 5px;color: #e4002b;font-family: Arial,Tahoma;}
 #board-list .list .info .date{display: block;font-size: 12px;color: #999999;margin-top: 15px;}
