--- a/theme/zigger-simple/layout/css/layout.css
+++ b/theme/zigger-simple/layout/css/layout.css
@@ -188,7 +188,8 @@ textarea.required{background-image: url('../images/input-required-bull.png');bac
 #sch fieldset:after{display: block;content: '';clear: both;}
 #sch fieldset > *{float: left;}
 #sch fieldset .inp{border: none;width: calc(100% - 40px);height: 40px;padding-left: 15px;background: transparent;}
-#sch fieldset .sbm{width: 40px;height: 40px;border: none;color: #999;font-size: 15px;background: transparent;}
+#sch fieldset .sbm{position: relative;width: 40px;height: 40px;border: none;color: #999;font-size: 15px;background: transparent;text-indent: -999em;}
+#sch fieldset .sbm:after{content: '\f002';display: block;position: absolute;top: 0;left: 0;width: 100%;line-height: 40px;text-align: center;font-weight: bold;font-family: 'Font Awesome 5 Free';text-indent: 0;}
 
 #tnb{position: absolute;top: 35px;right: 0;}
 #tnb li{position: relative;display: inline-block;vertical-align: top;padding: 0 15px;}
